--- a/publis.html
+++ b/publis.html
@@ -9,6 +9,11 @@
 <h1>Publications</h1>
 <hr>
 
+<p>Dejan Jovanovi&#263; and Bruno Dutertre,
+  <a href="https://arxiv.org/abs/2106.04340">Interpolation and Model Checking
+    for Nonlinear Arithmetic</a>, to be presented at <a href="/http://i-cav.org/2021/">CAV 2021<a>, JUly 2021.
+</p>
+
 <p>Jorge A. Navas, Bruno Dutertre, and Ian A. Mason,
   <a href="publis/vstte2020.pdf">Verification of an Optimized NTT
   Algorithm</a> presented
