--- a/index.html
+++ b/index.html
@@ -7,14 +7,287 @@
 <body>
 <div class="container">
 <h1>Bruno Dutertre</h1>
+<p>
+  <h4>
+    Sr. Principal Applied Scientist<br>
+    Automated Reasoning Group<br>
+    Amazon Web Services<br>
+  </h4>
+</p>
+
+
+<h2>Publications</h1>
 <hr>
 
-<ul class="square">
-<li><a href="publis.html">Publications</a></li>
-<li><a href="https://yices.csl.sri.com">Yices</a></li>
-<li><a href="https://sri-csl.github.io/sally">Sally</a></li>
-<li><a href="https://pvs.csl.sri.com">PVS</a></li>
-</ul>
+<p>Dejan Jovanovi&#263; and Bruno Dutertre,
+  <a href="https://arxiv.org/abs/2106.04340">Interpolation and Model Checking
+    for Nonlinear Arithmetic</a>, to be presented at <a href="/http://i-cav.org/2021/">CAV 2021<a>, JUly 2021.
+</p>
+
+<p>Jorge A. Navas, Bruno Dutertre, and Ian A. Mason,
+  <a href="publis/vstte2020.pdf">Verification of an Optimized NTT
+  Algorithm</a> presented
+  at <a href="https://sri-csl.github.io/VSTTE20">VSTTE 2020</a>,
+  12th Working Conference on Verified Software: Theories, Tools, and
+  Experiments, July 2020.
+</p>
+
+<p>B. Dutertre, <a href="publis/smt2020.pdf"> An Empirical Evaluation
+    of SAT Solvers on Bit-vector Problems</a>,
+  presented at <a href="http://smt-workshop.cs.uiowa.edu/2020/program.shtml">SMT 2020</a>
+  18th International Workshop on Satisfiability Modulo Theories, Paris France, July 2020.
+  (<a href="bit-blasting.html">Benchmarks</a>).
+</p>
+  
+<p>S. Graham-Lengrand, D. Jovanovi&#263;, and B. Dutertre,
+  <a href="https://arxiv.org/pdf/2004.07940.pdf">
+    Solving bitvectors with MCSAT: Explanations from Bits and
+   Pieces</a>, International Joint Conference on Automated Reasoning
+   (<a href="https://ijcar2020.org">IJCAR 2020</a>), Paris, France,
+   July 2020.
+</p>
+  
+<p>B. Dutertre, D.  Jovanovi&#263;, and Jorge A. Navas,
+  <a href="https://ntrs.nasa.gov/search.jsp?R=20180006291">
+    Advanced Symbolic Analysis Tools for Fault-Tolerant Integrated Distributed Systems</a>,
+  NASA/CR-2018-21934, May 2018.
+</p>
+  
+<p>B. Dutertre, D.  Jovanovi&#263;, and Jorge A. Navas,
+<a href="publis/nfm2018.pdf">Verification of Fault-Tolerant Protocols
+with Sally</a>, presented
+at <a href="https://shemesh.larc.nasa.gov/NFM2018">NFM 2018</a>, Newport News, VA, April
+2018. (<a href="https://rd.springer.com/chapter/10.1007/978-3-319-77935-5_8">Springer
+Link</a>).
+</p>
+
+<p>D. Jovanovi&#263; and B. Dutertre,
+<a href="publis/fmcad2016.pdf">Property-Directed k-Induction</a>,
+presented at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.html">
+FMCAD</a>, Mountain View, CA, October 2016.
+</p>
+
+<p>A. Tiwari, A. Gasc&oacute;n, and B. Dutertre,
+<a href="publis/cade2015.pdf">Program Synthesis Using Dual Interpretation</a>,
+presented at <a href="http://conference.mi.fu-berlin.de/cade-25/home">CADE-25</a>,
+Berlin, Germany. August 2015.
+</p>
+
+<p>B. Dutertre,
+<a href="publis/smt2015.pdf">Solving Exists/Forall Problems With Yices</a>,
+extended abstract presented at the <a href="http://smt2015.csl.sri.com/">SMT Workshop 2015</a>,
+San Francisco, CA, July 2015.
+</p>
+
+<p>A. Gasc&oacute;n, P. Subramanyan, B. Dutertre, A. Tiwari, D. Jovanovi&#263;, S. Malik,
+<a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD14/proceedings/17_gascon.pdf">Template-Based
+Circuit Understanding</a>, presented
+at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD14/index.shtml">FMCAD</a>,
+Lausanne, Switzerland, October 2014.
+</p>
+
+<p>B. Dutertre, <a href="http://yices.csl.sri.com/papers/cav2014.pdf">Yices&nbsp;2.2</a>,
+presented at CAV'2014, Vienna, Austria, July 2014.
+</p>
+
+<p>A. Tiwari, B. Dutertre, D. Jovanovi&#263;, T. de&nbsp;Candia, P. Lincoln, J. Rushby, D. Sadigh, S. Seshia,
+<a href="http://www.csl.sri.com/users/tiwari/papers/hicons14.pdf">Safety
+Envelope for Security</a>, presented at the 3rd International
+Conference on High Confidence Networked Systems, pp.&nbsp;85&#8211;94,
+2014.
+</p>
+
+
+
+<p>T. King, C. Barrett, and
+B. Dutertre, <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD13/papers/73-Simplex-Sum-SMT.pdf">Simplex
+with Sum of Infeasibilities for SMT</a>, presented
+at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD13/index.shtml">FMCAD</a>,
+Portland, OR, November 2013.
+</p>
+
+<p>W. Steiner and B. Dutertre, <a href="http://www.inderscience.com/info/inarticle.php?artid=58398">
+The TTEthernet Synchronization Protocols and their Formal Verification</a>, International Journal of 
+Critical Computer-Based Systems, Vol.&nbsp;4, No.&nbsp;3, pp.&nbsp;280&#8211;300, 2013.
+</p>
+
+<p>B. Hall, K. Driscoll, K. Schweiker, and
+B. Dutertre, <a href="http://ntrs.nasa.gov/search.jsp?R=20130012913">
+Investigating Actuation Force Fight with Asynchronous and Synchronous
+Redundancy Management Techniques</a>, NASA/CR-2013-217984, April 2013.
+</p>
+
+<p>B. Dutertre, A. Easwaran, B. Hall, and
+W. Steiner, <a href="publis/tte-dasc2012.pdf">Model-Based Analysis of
+Timed-Triggered Ethernet</a>, presented at the 31st Digital Avionics
+Systems Conference (DASC), October 2012.</p>
+
+<p>B. Dutertre, N. Shankar, and S. Owre, <a href="http://ntrs.nasa.gov/search.jsp?R=20120003666">
+Integrated Formal Analysis of Timed-Triggered Ethernet</a>, NASA/CR-2012-217554, May 2012.</p>
+
+<p>B. Dutertre, <a href="http://ntrs.nasa.gov/search.jsp?R=20110011564">Probabilistic
+Analysis of Distributed Fault-Tolerant Systems</a>, NASA/CR-2011-271090, May 2011.</p>
+
+<p>W. Steiner and B. Dutertre, <a href="http://www.springerlink.com/content/75104227542t187x/">
+Automated Formal Verification of the TTEthernet Synchronization Quality</a>,
+presented at <i>NASA Formal Methods (NFM 2011)</i>, Pasadena, CA, April 2011.
+</p>
+
+<p>W. Steiner and
+B. Dutertre, <a href="http://www.computer.org/portal/web/csdl/doi?doc=doi%2F10.1109%2FPRDC.2011.36">
+Layered Diagnosis and Clock-Rate Correction for the TTEthernet Clock
+Synchronization Protocol</a>, presented at <i>PRDC 2011</i>, Pasadena,
+CA, December 2011.
+</p>
+
+<p>W. Steiner and B. Dutertre, <a href="publis/fmics2010.pdf">
+SMT-Based Formal Verification of a TTEthernet Synchronization Function</a>,
+presented at <i>FMICS'2010</i>,
+Antwerp, Belgium, September 2010.
+</p>
+
+<p>N. Bj&oslash;rner, B. Dutertre, and L. de&nbsp;Moura, <a href="publis/lpar2008.pdf">
+Accelerating Lemma Learning Using Joins</a>, presented at <i>LPAR'2008</i>,
+Doha, Qatar, November 2008.
+</p>
+
+<p>L. de&nbsp;Moura, B. Dutertre and N. Shankar, <a href="publis/cav2007.pdf">
+A Tutorial on Satisfiability Modulo Theories</a>, presented at <i>CAV'2007</i>,
+Berlin, Germany, July 2007.
+</p>
+
+<p>B. Dutertre, <a href="publis/cip2007.pdf"> Formal Modeling and
+Analysis of the Modbus Protocol</a>, presented at </i>the First Annual
+IFIP WG 11.10 International Conference on Critical Infrastructure Protection</i>,
+Dartmouth College, NH, March 2007.
+</p>
+
+<p>B. Dutertre and L. de&nbsp;Moura, <a href="publis/cav06.pdf">
+A Fast Linear-Arithmetic Solver for DPLL(T)</a>, presented at <i>CAV'2006</i>,
+Seattle, Washington, August 2006.
+</p>
+
+<p>B. Dutertre and M. Sorea, <a href="publis/startup.pdf">Modeling and
+Verification of a Fault-Tolerant Real-Time Startup Protocol using
+Calendar Automata</a>, presented at <i>FORMATS/FTRTFT'04</i>,
+Grenoble, France, September 2004. Also available in <a
+href="publis/startup.ps.gz">PostScript</a>.
+</p>
+
+<p>Vu Ha, Murali Rangarajan, Darren Coffer, Harald Rue&szlig;, and
+Bruno Dutertre <a href="publis/icse04-preprint.pdf">Feature-Based Decomposition
+of Inductive Proofs Applied to Real-Time Avionics Software</a>, 
+<i>Proceedings of the 26th International Conference on Software
+Engineering (ICSE-2004)</i>, Edinburgh, Scotland, May 2004.</p>
+
+<p>B. Dutertre, <a href="publis/rtss02.pdf">Dynamic
+Scan Scheduling</a>, <i>IEEE Real-Time Systems Symposium</i>,
+pp.&nbsp;327&#8211;336, Austin, TX, December 2002.</p>
+
+<p>B. Dutertre, V. Crettaz, and V. Stavridou, <a
+href="publis/oakland02.pdf">Intrusion-Tolerant
+Enclaves</a>, <i> IEEE International Symposium on Security and
+Privacy</i>, pp.&nbsp;216&#8211;224, Oakland, CA, May 2002.</p>
+
+<p>B. Dutertre, H. Sa&iuml;di, and V. Stavridou, <a
+href="publis/dsn01w.pdf">Intrusion-Tolerant Group
+Management in Enclaves</a>, <i> International Conference on Dependable
+Systems and Networks (DSN'01)</i>, pp.&nbsp;203&#8211;212, G&ouml;teborg, Sweden,
+July 2001.</p>
+
+<p>B. Dutertre, <a href="publis/rtss00w.pdf">Formal
+Analysis of the Priority Ceiling Protocol</a>, <i> IEEE Real-Time
+Systems Symposium (RTSS'00)</i>, pp.&nbsp;151&#8211;160, Orlando, FL, November
+2000.</p>
+
+<p>B. Dutertre and V. Stavridou, <a
+href="publis/dasc00.pdf">Formal Analysis for
+Real-Time Scheduling</a>, <i> 19th AIAA/IEEE Digital Avionics
+Conference (DASC) </i>, Philadelphia, PA, October 2000.</p>
+
+<p> B. Dutertre, <i><a
+href="publis/feasibility.pdf">Scan
+Scheduling Specification and Analysis</a></i>, Technical Report,
+System Design Laboratory, SRI International, May 2000.
+
+<p>B. Dutertre and V. Stavridou, <a href="publis/safefm_tse.pdf">
+Formal Requirements Analysis of an Avionics Control System</a>,
+<i>IEEE Transactions on Software Engineering</i>, Vol.&nbsp;25,
+No.&nbsp;5, pp.&nbsp;267&#8211;278, May 1997.
+
+
+<p>B. Dutertre and V. Stavridou,
+<a href="publis/DutStravLfm97.pdf">Requirements Analysis of Real-Time
+Control Systems using PVS</a>, <i><a 
+href="http://atb-www.larc.nasa.gov/Lfm97/">Lfm'97</a>, Fourth NASA
+Langley Wokshop on Formal Methods,</i> NASA Conference Publication
+3356, pp.&nbsp;65&#8211;73, September 1997.</p>
+
+<p>B. Dutertre and S. Schneider, <a href="publis/tphols97.pdf">Using
+a PVS Embedding of CSP to Verify Authentication Protocols</a>,
+<i>Theorem Proving in Higher Order Logics, TPHOL's&nbsp;97</i>, LNCS&nbsp;1275,
+pp.&nbsp;121&#8211;136, August 1997.</p>
+
+<p>B. Dutertre, <a href="publis/tphol96.pdf">Elements of
+Mathematical Analysis in PVS</a>,<i>Theorem Proving in Higher Order
+Logics, TPHOL's&nbsp;96</i>, LNCS&nbsp;1125, pp.&nbsp;141&#8211;156, August 1996.</p>
+
+<p>B. Dutertre, <a href="publis/lics95.pdf">Complete Proof Systems
+for First-Order Interval Temporal Logic</a>, <i>IEEE Symposium on
+Logic in Computer Science, LICS'95</i>, pp.&nbsp;36&#8211;43, June 1995.</p>
+
+<hr>
+
+<p>B. Dutertre, <a href="publis/formal_modbus.pdf">Formal Modeling and
+Analysis of the Modbus Protocol</a>, Technical Report, SRI
+International, October 2006.
+</p>
+
+<p>B. Dutertre and L. de&nbsp;Moura, <a href="publis/sri-csl-06-01.pdf">
+Integrating Simplex with DPLL(T)</a>, Technical Report SRI-CSL-06-01, May 2006.
+</p>
+
+<p>B. Dutertre and M. Sorea, <a href="publis/sri-sdl-04-03.pdf">Timed
+Systems in SAL</a>, Technical Report SRI-SDL-04-03, July 2004.
+Also available in <a href="publis/sri-sdl-04-03.ps.gz">PostScript</a>.
+</p>
+
+<p>B. Dutertre, S. Cheung, and J. Levy, <a href="publis/sri-sdl-04-02.pdf">
+Lightweight Key Management in Wireless Sensor Networks by Leveraging 
+Initial Trust</a>, Technical Report SRI-SDL-04-02, April 2004.</p>
+
+<p>B. Dutertre, <a href="publis/prio-ceiling-pvs.pdf"> The Priority
+Ceiling Protocol: Formalization and Analysis Using PVS</a>, Technical
+Report, System Design Laboratory, SRI International, October 1999.</p>
+
+<p>B. Dutertre, <a href="publis/TR-CSD-94-3.pdf">On First Order
+Interval Temporal Logic</a>, Technical Report, CSD-TR-94-3, Depatrment
+of Computer Science, Royal Holloway, University of London, February
+1995.</p>
+
+<p><a name="report"> </a> B. Dutertre and S.  Schneider, <a href="publis/qmw_csd736.pdf">Embedding
+CSP in PVS.  Applications to Authentication Protocols</a>, Technical
+Report 736, Department of Computer Science, Queen Mary and Westfield
+College, May 1997.  (Also available as Technical Report CSD-TR-97-12,
+Royal Holloway, University of London).</p>
+
+<p> This is an expanded version of the paper above with more details on
+the embedding of CSP in PVS. </p>
+
+<p>B. Dutertre, <a href="publis/qmw_csd747.pdf">The Welch-Lynch
+Clock Synchronization Algorithm</a>, Technical Report 747, Department
+of Computer Science, Queen Mary and Westfield College, March 1998.</p>
+
+<hr>
+
+<h2>Software</h2>
+
+<p><a href="https://yices.csl.sri.com">Yices</a></p>
+
+<p><a href="https://sri-csl.github.io/sally">Sally</a></p>
+
+<o><a href="https://pvs.csl.sri.com">PVS</a></p>
+
 
 </div>
 </body>
