--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <p>Dejan Jovanovi&#263; and Bruno Dutertre,
   <a href="https://arxiv.org/abs/2106.04340">Interpolation and Model Checking
-    for Nonlinear Arithmetic</a>, to be presented at <a href="/http://i-cav.org/2021/">CAV 2021<a>, JUly 2021.
+    for Nonlinear Arithmetic</a>, to be presented at <a href="http:i-cav.org/2021/">CAV 2021<a>, JUly 2021.
 </p>
 
 <p>Jorge A. Navas, Bruno Dutertre, and Ian A. Mason,
