--- a/index.html
+++ b/index.html
@@ -19,9 +19,43 @@
 <h2>Publications</h1>
 <hr>
 
+<p>Clark Barrett, Pei-Wei Chen, Byron Cook, Bruno Dutertre, Robert B. Jones, Nham Le, Andrew Reynolds, Kunal Sheth,
+  Christopher Stephens, and Michael W. Whalen,
+  <a href="https://repositum.tuwien.at/bitstream/20.500.12708/200777/1/Barrett-2024-SMT-D%20New%20Strategies%20for%20Portfolio-Based%20SMT%20Solving-vor.pdf">
+    SMT-D: New Strategies for Portfolio-Based SMT Solving</a>,
+  presented at <a href="https://fmcad.org/FMCAD24/">FMCAD 2024</a>, Prague, Czech Republic, October 2024.
+</p>
+
+<p>Kevin Lotz, Amit Goel, Bruno Dutertre, Benjamin Kiesl-Reiter, Soonho Song, Dirk Nowotka,
+  <a href="">Solving String Constraints with Concatenation Using SAT</a>,
+  presented at <a href="https://fmcad.org/FMCAD24/">FMCAD 2024</a>, Prague, Czech Republic, October 2024.
+</p>
+
+<p>S. Hitarth, Cayden Codel, Hanna Lachnitt, and Bruno Dutertre,
+  <a href="https://repositum.tuwien.at/bitstream/20.500.12708/200775/1/Hitharth-2024-Extending%20DRAT%20to%20SMT-vor.pdf">
+    Extending DRAT to SMT</a>, presented at <a href="https://fmcad.org/FMCAD24/">FMCAD 2024</a>, Prague, Czech Republic, October 2024.
+</p>
+
+<p>Jiong Yang, Yaroslav A. Kharkov, Yunong Shi, Marijn J. H. Heule, and Bruno Dutertre,
+  <a href="https://drops.dagstuhl.de/storage/00lipics/lipics-vol305-sat2024/LIPIcs.SAT.2024.29/LIPIcs.SAT.2024.29.pdf">
+    Quantum Circuit Mapping Based on Incremental and Parallel SAT Solving</a>,
+  presented at <a href="https://satisfiability.org/SAT24/">SAT 2024</a>, Pune, India, August 2024.
+</p>
+
+<p>Haniel Barbosa, Clark Barrett, Byron Cook, Bruno Dutertre, Gereon Kremer, Hanna Lachnitt, Aina Niemetz,
+  Andres N&ouml;tzli, Alex Ozdemir, Mathias Preiner, Andrew Reynolds, Cesare Tinelli, and Yoni Zohar,
+  <a href="https://dl.acm.org/doi/pdf/10.1145/3587692">Generating and Exploiting Automated Reasoning Proof Certificates</a>,
+  Communications of the ACM, October 2023, Vol 66, No 10.
+</p>
+
+<p>Kevin Lotz, Amit Goel, Bruno Dutertre, Benjamin Kiesl-Reiter, Soonho Kong, Rupak Majumdar, and Dirk Nowotka,
+  <a href="publis/cav2021preprtint.pdf">Solving String Constraints Using SAT</a>,
+  presented at <a href="https://www.i-cav.org/2023/">CAV 2023</a>, July 2023.
+</p>
+
 <p>Dejan Jovanovi&#263; and Bruno Dutertre,
   <a href="https://arxiv.org/abs/2106.04340">Interpolation and Model Checking
-    for Nonlinear Arithmetic</a>, to be presented at <a href="http://i-cav.org/2021/">CAV 2021<a>, JUly 2021.
+    for Nonlinear Arithmetic</a>, presented at <a href="http://i-cav.org/2021/">CAV 2021</a>, July 2021.
 </p>
 
 <p>Jorge A. Navas, Bruno Dutertre, and Ian A. Mason,
