--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </p>
 
 <p>Kevin Lotz, Amit Goel, Bruno Dutertre, Benjamin Kiesl-Reiter, Soonho Kong, Rupak Majumdar, and Dirk Nowotka,
-  <a href="publis/cav2021preprtint.pdf">Solving String Constraints Using SAT</a>,
+  <a href="publis/cav2021preprint.pdf">Solving String Constraints Using SAT</a>,
   presented at <a href="https://www.i-cav.org/2023/">CAV 2023</a>, July 2023.
 </p>
 
